react-app/src/styles/global.css
/* ... */
.header-gradient {
  background: linear-gradient(#000000B2, #00000000);
}

.header-gradient .header-image {
  position: relative;
  z-index:-1;
}

.header-image {
  width: 100%;
  height: 100%;
}

.header-position-top {
  position: absolute;
  top: 0;
  width: 100%;
}

.header-position-center {
  position: absolute;
  top: 50%;
  left: 50%;
  --position-translate-x: -50%; /* TEST */
  --position-translate-y: -50%; /* TEST */
  transform: translate(var(--position-translate-x),var(--position-translate-y));
  max-width: 624px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 29px;
  color: #ECECEC;
}

.header-position-center h1 {
  font-family: Inter;
  font-size: 62px;
  font-weight: 600;
  line-height: 62px;
  letter-spacing: -0.04em;
  text-align: center;
  margin: 0;
}

.header-position-center p {
  color: var(--dl-color-default-smartwhite);
  font-family: Inter;
  font-size: 17px;
  font-weight: 700;
  line-height: 20.57px;
  letter-spacing: -0.04em;
  text-align: center;
  margin: 0;
}

.header-position-bottom {
  position: absolute;
  bottom: 0;
}

.search-container {
  position: absolute;
  top: 65%;
  left: 40%;
  width: 600px;
}

.gene-search {
  position: relative;
  width: 600px;
  display: flex;
  align-items: center;
  gap: 15px;
  .search-icon {
    position: absolute;
    top: 33%;
    left: 10px;
  }
}

.gene-search input.search-box {
  padding-left: 30px;
  width: 100%;
  height: 42px;
  border-radius: 5px;
  border: none;
  outline: none;
  font-family: Inter;
  font-size: 14px;
  font-weight: 400;
  box-shadow: 0 1px 1px rgba(153, 153, 153, 1);
  cursor: pointer;
}

.checkbox-container {
  display: flex;
  align-items: center;
  gap: 5px;
  .checkbox-label {
    color: var(--dl-color-pure-white);
    font-size: 13px;
    width: 125px;
    cursor: pointer;
  }
}

.checkbox-container input[type="checkbox"] {
  appearance: none;
  width: 20px;
  height: 20px;
  border-radius: 3px;
  background-color: var(--dl-color-pure-white);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: background-color 0.2s, border-color 0.2s;
}

.checkbox-container input[type="checkbox"]:checked {
  background-color: #00bfa5;
  border-color: #00bfa5;
}

.checkbox-container input[type="checkbox"]:checked::before {
  content: "";
  width: 10px;
  height: 10px;
  background-color: var(--dl-color-pure-white);
  border-radius: 2px;
  transition: background-color 0.2s;
}

.suggestions-list {
  position: absolute;
  top: 100%;
  left: 0;
  width: 500px;
  max-height: 200px;
  overflow-y: auto;
  border: 1px solid #ddd;
  background-color: var(--dl-color-pure-white);
  z-index: 1000;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.suggestions-list li {
  padding: 10px;
  cursor: pointer;
}

.suggestions-list li:hover {
  background-color: #f0f0f0;
}

.header-triangle {
	clip-path: polygon(-5% 105%, 105% 105%, 105% -5%);
	background-color: var(--dl-color-default-smartwhite);
	width: 100%;
	height: 110px;
}

.custom-cookie-banner {
  /*Todo: check why styles are not overriden
  bottom: '20px !important';
  */
}

.custom-cookie-banner > div:first-child {
  /* This targets the auto-generated div */
  flex: 1;
  margin: 0 !important; /* Remove the extra margin */
  padding: 0;
}

.cookie-container {
  display: flex;
}

.box1, .box2 {
  padding: 10px;
  margin: 5px;
}

.cookie-logo {
  background-image: url("../images/icons/cookie.png");
  background-position-y: center;
  background-position-x: center;
  background-repeat: no-repeat;
  background-size: contain;
  width: 32px;
  height: 32px;
}

.content {
  font-family: Inter;
  font-size: 14px;
  font-weight: 400;
  line-height: 16.94px;
  text-align: left;
  color: var(--dl-color-default-smartblack);
}

/* --- HOME ABOUT */
.home-about {
  background-color: var(--dl-color-default-smartwhite);
  height: 528px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-about-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
}

.home-about h2 {
  width: 624px;
  height: 62px;
  font-family: Inter;
  font-size: 40px;
  font-weight: 600;
  line-height: 62px;
  letter-spacing: -0.04em;
  text-align: center;
}

.home-about h2, p {
  margin: 0;
  padding: 0;
}

.home-about .home-about-text {
  width: 784px;
  height: 150px;
  font-family: Inter;
  font-size: 17px;
  font-weight: 400;
  line-height: 30px;
  letter-spacing: -0.04em;
  text-align: center;
}

@media (width <= 840px) {
  .home-about .home-about-text {
    width: 85%;
    height: auto;
  }
}

@media (width <= 480px) {
   .header-triangle,
   .home-news-container,
   .home-news-triangle,
   .home-questions-triangle,
   .home-policies-triangle {
    display: none;
  }
  .home-about,
  .home-about h2,
  .home-about .home-about-text {
    width: auto;
    height: auto;
  }

  .home-about,
  .home-news,
  .home-questions-section,
  .home-policies {
    padding: 4rem 0;
  }
}

.home-about-link {
  width: 343px;
  height: 21px;
  font-family: Inter;
  font-size: 17px;
  font-weight: 600;
  line-height: 20.57px;
  letter-spacing: -0.03em;
  text-align: center;
  color: #E84E0F;
}

/* --- HOME CARD --- */
.home-card-row {
  display: flex;
  gap: 2rem;
  position: absolute;
  top: 558px;
  z-index: 3;
}

@media (width <= 1253px) {
  .home-card-row {
    width: calc(100% - 20px);
    overflow-x: auto;
    left: 20px;
  }

  .home-card:last-child {
    margin-right: 20px;
  }

  .home-card {
    min-width: 327px;
    margin-bottom: 0.5rem;
  }
}

@media (width <= 480px) {
  .home-card-row {
    width: 100%;
    overflow-x: visible;
    flex-wrap: wrap;
    position: relative;
    left: 0;
    top: -150px;
    margin-bottom: -150px;
  }

  .home-card:last-child {
    margin-right: 0;
  }

  .home-card {
    margin: auto;
  }
}
/* ... */

